crystal-facet-uml (1.65.7) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * replaced deprecated gdk_texture_new_for_pixbuf, gdk_cairo_set_source_pixbuf
  * workaround for false positive Wstringop-overflow at utf8stringbuf.inl:312

 -- Andreas Warnke <cfu@andreaswarnke.de>  Thu, 25 Sep 2025 06:00:00 +0200

crystal-facet-uml (1.65.6) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Searching for a non-scenario-based relationship finds expected diagrams
  * Searching for a scenario relationship finds less superfluous occurrences
  * in html export, "appears in" links to own, current chapter are omitted

 -- Andreas Warnke <cfu@andreaswarnke.de>  Thu, 25 Sep 2025 06:00:00 +0200

crystal-facet-uml (1.65.5) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * if search for relationships in interactions, these are found
  * if search for relationships in interactions, non-interactions are skipped
  * if search for relationships agnostic to interactions, interactions skipped

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 14 Sep 2025 16:30:00 +0200

crystal-facet-uml (1.65.4) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * in debug mode, no assertion if searching without open database
  * no overlength string warnings, all strings are below 4096 bytes
  * compile flag -Woverlength-strings removed
  * some icons of classifier types beautified

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 13 Sep 2025 09:30:00 +0200

crystal-facet-uml (1.65.3) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * icons of edit buttons beautified
  * html user documentation is single-paged
  * search pages show only diagrams that contain the visible results

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 31 Aug 2025 09:00:00 +0200

crystal-facet-uml (1.65.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * desktop file renamed and dbus app-name adapted to arrows2boxes.de domain

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 23 Aug 2025 08:00:00 +0200
