@@ -6,7 +6,7 @@
     "major_version": 1,
     "minor_version": 2,
     "generator_name": "crystal-facet-uml",
-    "generator_version": "1.65.3"
+    "generator_version": "1.65.7"
   }
   ,
   "views":
